# ourfamroots

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  OurFamRoots_FrontendArchitecture_v1.0.md  README.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json
backend/: .coverage  .coveragerc  .env.example  Dockerfile  Dockerfile.worker  Makefile  alembic.ini  gen_relationships.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_extensions_and_tenants.py  0002_users.py  0003_family_trees.py  0004_genealogy.py  0005_collaboration.py  0006_audit.py  0007_oauth_connections.py  0008_media.py  0009_baseline_indexes.py  0010_search_indexes.py  0011_person_photo_url.py  0012_audit_actions.py  0013_app_roles.py  0014_login_events.py  0015_login_event_type.py  0016_permission_groups.py  0017_tree_cover_emoji.py  0018_merge_trees_action.py  0019_person_extra_fields.py  0020_user_deletion_token.py  0021_tree_cover_image_url.py  0022_family_group_custom_label.py  0023_audit_update_relationship.py  0024_tree_link_sharing.py  0025_notifications.py  0026_push_subscriptions.py  0027_permission_group_redesign.py  0028_tree_pins.py  0029_family_group_is_divorced.py  0030_family_group_dates.py  0031_person_city_country.py  (+16 more)
backend/requirements/: base.txt  test.txt
backend/scripts/: fix_selyse.py  seed_family_with_photos.py  seed_got_family.py  seed_large_family.json  seed_large_family.py  seed_shah_dynasty.py  seed_trump_family.py  seed_users.py  update_got_api_photos.py  update_got_photos.py  update_got_tmdb.py  update_shah_photos.py
backend/src/: config.py  main.py
backend/tests/: conftest.py  factories.py
(+316 files in other folders)
