[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ourfamroots-backend"
version = "1.0.0"
description = "OurFamRoots genealogy platform — backend API"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.12",

    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",

    # Validation & settings
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",

    # Auth
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.2.1",

    # Cache
    "redis[hiredis]==5.2.1",

    # HTTP client (for OAuth)
    "httpx==0.28.0",

    # Logging
    "structlog==24.4.0",

    # Task queue
    "celery[redis]==5.4.0",

    # Utilities
    "python-ulid==3.0.0",
    "email-validator==2.2.0",
    "orjson==3.10.12",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.0",
    "factory-boy==3.3.1",
    "faker==33.1.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
    "asgi-lifespan==2.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing -q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
